feat: added filtering and ordering features for comments
