# docs/swagger.json
@@ -188,6 +188,12 @@
                         "schema": {
                             "$ref": "#/definitions/handler.PostCommentRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization header",
+                        "name": "Authorization",
+                        "in": "header"
                     }
                 ],
                 "responses": {
@@ -579,13 +585,12 @@
                     "type": "string",
                     "example": "This drop makes sense after Q2 miss."
                 },
+                "sentiment": {
+                    "type": "string"
+                },
                 "ticker_event_id": {
                     "type": "string",
                     "example": "drop1"
-                },
-                "user_id": {
-                    "type": "string",
-                    "example": "d290f1ee-6c54-4b01-90e6-d701748f0851"
                 }
             }
         },
@@ -620,6 +625,9 @@
                     "type": "string"
                 },
                 "id": {
+                    "type": "string"
+                },
+                "sentiment": {
                     "type": "string"
                 },
                 "ticker_event_id": {
