# internal/models/comment.go
@@ -9,7 +9,9 @@ import (
 type Comment struct {
 	ID         		uuid.UUID `json:"id"`
 	UserID    		string    `json:"user_id"`
+	Username		string	  `json:"username"`
 	TickerEventID   string    `json:"ticker_event_id"` // Check ticker and event to get proper comment seciton
 	Content   		string    `json:"content"`
 	CreatedAt 		time.Time `json:"created_at"`
+	Sentiment		string	  `json:"sentiment"`
 }
